# booker

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml
migrations/: 20251126201830_create_books.sql  20251126204448_create_users.sql  20251126204516_create_authors.sql  20251126204524_create_book_authors.sql  20251126204533_create_isbns.sql  20251126204542_create_user_books.sql  20251126204954_create_update_trigger.sql
src/: config.rs  main.rs
src/db/: mod.rs  pg_errors.rs
src/db/models/: author.rs  book.rs  book_author.rs  isbn.rs  mod.rs  user.rs  user_book.rs
src/handlers/: mod.rs
src/handlers/auth/: handlers.rs  mod.rs
src/handlers/book/: handlers.rs  mod.rs
src/handlers/user/: handlers.rs  mod.rs
src/middleware/: permission.rs
src/services/: auth.rs  mod.rs
src/services/open_library/: mod.rs  open_library.rs
