[package]
name = "booker"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
chrono = { version = "0.4.42", features = ["serde"]}
dotenv = "0.15.0"
reqwest = { version = "0.12.24", features = ["json"]}
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "time"]}
time = { version = "0.3.44", features = ["serde"]}
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"]}
futures-util = "0.3.31"
